# src/main/java/org/allane/model/Brand.java
@@ -1,0 +1,21 @@
+package org.allane.model;
+
+import jakarta.persistence.*;
+import lombok.Getter;
+import lombok.Setter;
+
+import java.util.List;
+
+@Entity
+@Getter
+@Setter
+@Table(name = "BRAND")
+public class Brand {
+    @Id
+    @GeneratedValue(strategy = GenerationType.SEQUENCE)
+    private Integer id;
+    @Column
+    private String name;
+    @OneToMany(mappedBy = "brand", fetch = FetchType.EAGER)
+    private List<Model> models;
+}
