# src/main/java/org/allane/model/Model.java
@@ -1,0 +1,20 @@
+package org.allane.model;
+
+import jakarta.persistence.*;
+import lombok.Getter;
+import lombok.Setter;
+
+@Entity
+@Getter
+@Setter
+@Table(name = "MODEL")
+public class Model {
+    @Id
+    @GeneratedValue(strategy = GenerationType.SEQUENCE)
+    private Integer id;
+    @Column
+    private String name;
+    @ManyToOne
+    @JoinColumn(name = "brand")
+    private Brand brand;
+}
